crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_blank-lines-before-nested-definition_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E306 [*] Expected 1 blank line before a nested definition, found 0
  --> E30.ipynb:60:5
   |
58 | def a():
59 |     x = 1
60 |     def b():
   |     ^^^
61 |         pass
62 | # end
   |
help: Add missing blank line
   |
59 |     x = 1
60 +
61 |     def b():
   |
