crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_too-many-blank-lines_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E303 [*] Too many blank lines (2)
  --> E30.ipynb:29:5
   |
29 |     # arbitrary comment
   |     ^^^^^^^^^^^^^^^^^^^
30 |
31 |     def inner():  # E306 not expected (pycodestyle detects E306)
   |
help: Remove extraneous blank line(s)
   |
27 |
   -
28 |     # arbitrary comment
   |

E303 [*] Too many blank lines (4)
  --> E30.ipynb:39:1
   |
39 | def fn():
   | ^^^
40 |     pass
41 | # end
   |
help: Remove extraneous blank line(s)
   |
36 |
   -
   -
37 | def fn():
   |
