crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__indent_width_2.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E111 Indentation is not a multiple of 2
 --> E11_indent_width.py:6:1
  |
4 | #: E111 with any indent-width (3 is not a multiple of 2, 4, or 8)
5 | if x > 2:
6 |    print(x)
  | ^^^
7 | #: E111 and E114 with indent-width=4 or 8, ok with indent-width=2
8 | if True:
  |
